This is a brief overview of user-visible changes in AdPlug.

Changes for version 1.3:
	- Completely new build system for DOS and Windows.
	- Centralized debug management.
	- Added a whole bunch of new developer documentation.
	- Much more flexible Protracker player.
	- New or corrected IMF timer rates for the following games:
		- Duke Nukem 2
	- New format support:
		- SNG: Adlib Tracker 1.0
		- CFF: BoomTracker 4.0

Changes for version 1.2:
	- Added a whole bunch of new players:
		- SAT, ROL, SNG, XAD, XMS, MAD
	- SA2 player now handles version 7 files.
	- GCC 3.x compatibility.
	- Compiles on FreeBSD (and maybe many more flavors).
	- Now using GNU autotools for UNIX builds.
	- New OPL disk writer that creates RdosPlay RAW files.
	- Reordered source directory structure (removed players directory).

Changes for version 1.1:
	- Added MKJ, DFM and BAM players.
	- Removed Ken Silverman's YM3812 emulator due to portability issues.
	- Fixed memory leak in SNG player.
	- Made AdPlug a real library.
	- Added lots of documentation.