@@ -1,7 +1,8 @@
 SUBDIRS = src
 
-EXTRA_DIST = doc/Player-Development-mini-HOWTO.txt INSTALL.unix \
-INSTALL.win32 INSTALL.dos Makefile.wat Makefile.bt
+EXTRA_DIST = INSTALL.unix INSTALL.win32 INSTALL.dos Makefile.wat \
+	Makefile.bt doc/Hacking.ms doc/Player-Development.ms \
+	doc/Protracker.ms
 
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
